# BotForwarding_Django

./: .gitignore  Dockerfile  README.md  __init__.py  docker-compose.yaml  pyproject.toml  run.sh
api/app/: manage.py
api/app/app/: settings.py  urls.py
api/app/botForward_api/: admin.py  apps.py  models.py  serializers.py  urls.py  utils.py  views.py
api/app/botForward_api/migrations/: 0001_initial.py  0002_remove_post_image_alter_post_text_media.py  0003_alter_media_file.py  0004_remove_media_media_type.py  0005_media_url.py  0006_media_file_path_alter_media_file.py  0007_remove_media_file_path.py  0008_remove_media_url.py  0009_alter_media_file.py  0010_alter_media_file.py  0011_channel_alter_media_file_settings.py  0012_alter_settings_options_remove_settings_channels_and_more.py  0013_targetchannel.py  0014_alter_targetchannel_name.py  0015_alter_targetchannel_name.py  0016_alter_targetchannel_settings.py  0017_alter_targetchannel_parse_channels.py  0018_remove_channel_settings_and_more.py  0019_remove_targetchannel_settings_and_more.py  0020_session_post_target_channel_and_more.py
api/app/client/: config.py  handlers.py  interface.py  utils.py
api/app/client/management/commands/: run.py
api/app/scripts/: create_session.py
